--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
-version: 2
+#version: 2
 
 # Personal info
 name: Brett Harris
