--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ darkmode: false
 # about_title: Sobre mi
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  ¡Hola buenas! Soy Adrián Viñuela y estoy haciendo unas pruebas para crear una página web. Mi idea es conseguir aprender sobre ciertas áreas que siempre me han interesado y tener esta web como una especie de apuntes, a la vez que me sirve de portfolio.
+  
+  Los temas que vamos a tratar (o al menos por los que vamos a empezar) son la <mark>estadística</mark> y el <mark>machine learning</mark>
 
 content:
   - title: Projects # Title for the section
