--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ darkmode: false
 # google_analytics: "UA-00000000-0"
 
 #About Section
-#about_title: Sobre mi #esto iba con asteristo
+about_title: Sobre mi #esto iba con asteristo
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   ¡Hola buenas! Soy Adrián Viñuela y estoy haciendo unas pruebas para crear una página web. Mi idea es conseguir aprender sobre ciertas áreas que siempre me han interesado y tener esta web como una especie de apuntes, a la vez que me sirve de portfolio.
