--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Aprendiendo a aprender
 email: adrivu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
-  Soy Adrián Viñuela Udaondo y esta es mi web, creada como testigo de lo que voy a ir aprendiendo desde el final de la universidad. Aquí estarán mis apuntes, proyectos, experiencias y lo que vaya surgiendo.
+  Web creada como testigo de mi aprendizaje. Aquí estarán mis apuntes, proyectos, experiencias y lo que vaya surgiendo.
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
