--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,13 @@ theme: minima
 plugins:
   - jekyll-feed
 
+header_pages:
+  - index.md
+  - estadistica.md
+  - machine learning.md
+  - industria.md
+  - about.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
